cursive-bootstrap/tests/ui/E-TYP/E-TYP-1902.cursive
// RUN: compile-fail
// DIAG: E-TYP-1902
// SPEC: 5.2.3
// DESC: Missing field initializer in record literal

record Point {
    x: i32
    y: i32
}

public procedure main(move ctx: Context) -> i32 {
    let p: Point = Point { x: 1 }  //~ ERROR E-TYP-1902: missing field y
    return 0
}
